--- a/codeWork/css/mainStyle.css
+++ b/codeWork/css/mainStyle.css
@@ -33,15 +33,17 @@ body {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    background-color: red;
+    background-color: #aaa;
     align-items: center;
     align-content: center;
-    min-height:100vh;
+    min-height: 100vh;
+    color: #333;
 }
 
 #copyCont {
-    max-height:100vh;
-    margin:20px;
+    max-height: 100vh;
+    text-align: center;
+
 }
 
 
@@ -50,6 +52,11 @@ body {
 #navHolder img {
     height: 50px;
     width: 50px;
+    margin: 0 10px 10px 10px;
+}
+
+#navHolder img:last-child {
+    margin: 0 10px 0 10px;
 }
 
 #leftNav {
